fix games issue with bulk add
